--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,5 +1,3 @@
-
-
 @Manual{citeR,
     title = {R: A Language and Environment for Statistical Computing},
     author = {{R Core Team}},
@@ -71,4 +69,17 @@
     doi = {10.21105/joss.01686},
   }  
   
+@article{OHRNBERGER201742,
+  title = {The relationship between physical and mental health: A mediation analysis},
+  journal = {Social Science & Medicine},
+  volume = {195},
+  pages = {42-49},
+  year = {2017},
+  issn = {0277-9536},
+  doi = {https://doi.org/10.1016/j.socscimed.2017.11.008},
+  url = {https://www.sciencedirect.com/science/article/pii/S0277953617306639},
+  author = {Julius Ohrnberger and Eleonora Fichera and Matt Sutton},
+  keywords = {UK, Mental health, Physical health, Mediation analysis, Older population},
+  abstract = {There is a strong link between mental health and physical health, but little is known about the pathways from one to the other. We analyse the direct and indirect effects of past mental health on present physical health and past physical health on present mental health using lifestyle choices and social capital in a mediation framework. We use data on 10,693 individuals aged 50 years and over from six waves (2002–2012) of the English Longitudinal Study of Ageing. Mental health is measured by the Centre for Epidemiological Studies Depression Scale (CES) and physical health by the Activities of Daily Living (ADL). We find significant direct and indirect effects for both forms of health, with indirect effects explaining 10% of the effect of past mental health on physical health and 8% of the effect of past physical health on mental health. Physical activity is the largest contributor to the indirect effects. There are stronger indirect effects for males in mental health (9.9%) and for older age groups in mental health (13.6%) and in physical health (12.6%). Health policies aiming at changing physical and mental health need to consider not only the direct cross-effects but also the indirect cross-effects between mental health and physical health.}
+}
   
