--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -44,6 +44,19 @@ The remainder of this paper is structured as follows. @sec-data....
 
 The paper uses data collected from the US General Social Survey (GSS) from NORIC at the University of Chicago [@GSS]. From the dataset, this paper focuses on the "number of hours worked last week" variable, from the years 1992 to 2022. This longitudinal approach allows us to compare labour dynamics across different economic downturns, including the 1998 Asian Financial Crisis, the 2008 Global Financial Crisis, and the COVID-19 pandemic in 2020.
 
+For the analysis, we retrieved the following data as described in @tbl-use-var.
+
+| Variable | New Name   | Description                     | Example |
+|----------|------------|---------------------------------|---------|
+| sex      | sex        | Respondent's gender             |2(FEMALE)|
+| HEALTH   | health     | The year of the survey recorded | 2007    |
+| SATHEALT | AGE        | The age of the respondents      | 23      |
+| PHYSHLTH | Phys_Health| Respondents' physical health    | MALE    |
+
+
+: Source data retrieved from GSS {#tbl-use-var}
+
+
 ## Source Data
 
 
