--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -50,10 +50,11 @@ For the analysis, we retrieved the following data as described in @tbl-use-var.
 
 | Variable | New Name  | Description                   | Example |
 |----------|-----------|-------------------------------|---------|
+| ID_      | id        | Response ID                   | 1       |
+| YEAR     | year      | Year of the Data Recorded     | 1977    |
 | SEX      | sex       | Respondent's gender           | Female  |
 | AGE      | age       | Respondent's age              | 25      |
 | HEALTH   | health    | Respondents' health condition | Good    |
-| YEAR     | year      | Year of the Data Recorded     | 1977    |
 | PHYSHLTH | phys_days | Days of Respondents' physical health being not good   | 15      |
 | MNTLHLTH | ment_days | Days of Respondents' mental health being not good     | 20      |
 | DEPRESS  | depress   | Whether respondents have been told having depression  | Yes     |
