--- a/paper/references.bib
+++ b/paper/references.bib
@@ -293,3 +293,19 @@
   month={May}, 
   pages={93–100}
 } 
+
+ @Misc{rstanarm,
+    title = {rstanarm: {Bayesian} applied regression modeling via {Stan}.},
+    author = {Ben Goodrich and Jonah Gabry and Imad Ali and Sam Brilleman},
+    note = {R package version 2.32.1},
+    year = {2024},
+    url = {https://mc-stan.org/rstanarm/},
+  }
+  
+@Manual{arrow,
+    title = {arrow: Integration to 'Apache' 'Arrow'},
+    author = {Neal Richardson and Ian Cook and Nic Crane and Dewey Dunnington and Romain François and Jonathan Keane and Dragoș Moldovan-Grünfeld and Jeroen Ooms and Jacob Wujciak-Jens and {Apache Arrow}},
+    year = {2024},
+    note = {R package version 15.0.1},
+    url = {https://CRAN.R-project.org/package=arrow},
+  }
